# account-cooker

./: .gitignore  Cargo.toml  LICENSE  README.md  THREAT_MODEL.md  cooker.example.toml
.github/workflows/: ci.yml
docs/: ELIGIBILITY.md  security-audit-2026-07-20.md  security-audit-2026-07-23.md
scripts/: recovery_test.sh
src/: clustering.rs  consolidation.rs  detectors.rs  lib.rs  main.rs  persona.rs  state.rs  timing.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/protocols/: jupiter.rs  marinade.rs  mod.rs  orca_lp.rs  supersonic_cast.rs
src/scheduler/: mod.rs
