[package]
name = "account-cooker"
version = "0.1.0"
edition = "2021"
description = "Solana account cooker — spawns long-lived agents that behave like real humans across major protocols, defeating wallet clustering and chain analysis."
license = "MIT"

[[bin]]
name = "cooker"
path = "src/main.rs"

[[bin]]
name = "timing_harness"
path = "src/bin/timing_harness.rs"

[[bin]]
name = "marinade_test"
path = "src/bin/marinade_test.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
solana-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
bincode = "1.3"
solana-system-interface = "1.0"

[profile.release]
opt-level = 3
lto = true
